Make the loader fixed to the viewport so it is always visible when an app is loading

--- a/src/App/wwwroot/css/App/01Main.scss
+++ b/src/App/wwwroot/css/App/01Main.scss
@@ -148,3 +148,10 @@ top-menu {
         cursor: not-allowed;
     }
 }
+
+loading-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
